fixed image cropping

--- a/app/assets/stylesheets/posts.css.scss
+++ b/app/assets/stylesheets/posts.css.scss
@@ -81,6 +81,10 @@ $postPadding: 0 3% 0 3%;
   }
 }
 
+.post article {
+  max-height: 100%;
+  overflow: hidden;
+}
 
 
 #post {
